Removed some duplicate Refs.

--- a/npneq-master.bib
+++ b/npneq-master.bib
@@ -2179,6 +2179,17 @@ year = {2020}
  title = {Electronic band structure effects in the stopping of protons in copper},
  journal = {Physical Review B}
 }
+@article{Quashie2020,
+    title = {Effect of chemical disorder on the electronic stopping of solid solution alloys},
+    journal = {Acta Materialia},
+    volume = {196},
+    pages = {576-583},
+    year = {2020},
+    issn = {1359-6454},
+    doi = {https://doi.org/10.1016/j.actamat.2020.06.061},
+    url = {https://www.sciencedirect.com/science/article/pii/S1359645420304961},
+author = {Edwin E. Quashie and Rafi Ullah and Xavier Andrade and Alfredo A. Correa},
+}
 
 %RRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRR
 @article{Refaely-Abramson2015a,
@@ -2432,7 +2443,12 @@ archivePrefix = {arXiv},
   volume={22},
   year={2018}
 }
-
+@article{Smart2021,
+    title = {Enhancing Defect Tolerance with Ligands at the Surface of Lead Halide Perovskites},
+    journal = {J. Phys. Chem. Lett.},
+    year = {submitted},
+    author = {Tyler J. Smart and Hiroyuki Takenaka and Tuan Anh Pham and Liang Z. Tan and Jin Z. Zhang and Tadashi Ogitsu and Yuan Ping}
+}
 @article{Soler2002,
   title={The SIESTA method for ab initio order-N materials simulation},
   author={Soler, Jos{\'e} M and Artacho, Emilio and Gale, Julian D and Garc{\'\i}a, Alberto and Junquera, Javier and Ordej{\'o}n, Pablo and S{\'a}nchez-Portal, Daniel},
@@ -2857,6 +2873,20 @@ archivePrefix = {arXiv},
  title = {{Spin Orbit Coupling Effects in Two-Dimensional Electron and Hole Systems}},
  year = {2003}
 }
+%XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+@article{Xiao_2020,
+	doi = {10.1038/s41567-020-0947-0},
+	url = {https://doi.org/10.1038\%2Fs41567-020-0947-0},
+	year = 2020,
+	month = {jun},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {16},
+	number = {10},
+	pages = {1028--1034},
+	author = {Jun Xiao and Ying Wang and Hua Wang and C. D. Pemmaraju and Siqi Wang and Philipp Muscher and Edbert J. Sie and Clara M. Nyby and Thomas P. Devereaux and Xiaofeng Qian and Xiang Zhang and Aaron M. Lindenberg},
+	title = {Berry curvature memory through electrically driven stacking transitions},
+	journal = {Nature Physics}
+}
 %YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY
 @article{Yabana2012,
  abstract = {We apply the coupled dynamics of time-dependent density functional theory and Maxwell equations to the interaction of intense laser pulses with crystalline silicon. As a function of electromagnetic field intensity, we see several regions in the response. At the lowest intensities, the pulse is reflected and transmitted in accord with the dielectric response, and the characteristics of the energy deposition are consistent with two-photon absorption. The absorption process begins to deviate from that at laser intensities of ∼{\textless}math{\textgreater}{\textless}mo{\textgreater}{\&}sim;1013{\textless}math{\textgreater}{\textless}msup{\textgreater}{\textless}mn{\textgreater}10{\textless}mn{\textgreater}13 W/cm2{\textless}math{\textgreater}{\textless}msup{\textgreater}{\textless}mrow{\textgreater}{\textless}mn{\textgreater}2, where the energy deposited is of the order of 1 eV per atom. Changes in the reflectivity are seen as a function of intensity. When it passes a threshold of about 3×1012{\textless}math{\textgreater}{\textless}mrow{\textgreater}{\textless}mn{\textgreater}3{\textless}mo{\textgreater}{\&}times;{\textless}msup{\textgreater}{\textless}mn{\textgreater}10{\textless}mn{\textgreater}12 W/cm2{\textless}math{\textgreater}{\textless}msup{\textgreater}{\textless}mrow{\textgreater}{\textless}mn{\textgreater}2, there is a small decrease. At higher intensities, above 2×1013{\textless}math{\textgreater}{\textless}mrow{\textgreater}{\textless}mn{\textgreater}2{\textless}mo{\textgreater}{\&}times;{\textless}msup{\textgreater}{\textless}mn{\textgreater}10{\textless}mn{\textgreater}13 W/cm2{\textless}math{\textgreater}{\textless}msup{\textgreater}{\textless}mrow{\textgreater}{\textless}mn{\textgreater}2, the reflectivity increases strongly. This behavior can be understood qualitatively in a model treating the excited electron-hole pairs as a plasma.},
@@ -2935,72 +2965,9 @@ year = {2019}
 
 %PLEASE PUT REFERENCES ALPHABETICALLY
 
-@article{Xiao_2020,
-	doi = {10.1038/s41567-020-0947-0},
-	url = {https://doi.org/10.1038\%2Fs41567-020-0947-0},
-	year = 2020,
-	month = {jun},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {16},
-	number = {10},
-	pages = {1028--1034},
-	author = {Jun Xiao and Ying Wang and Hua Wang and C. D. Pemmaraju and Siqi Wang and Philipp Muscher and Edbert J. Sie and Clara M. Nyby and Thomas P. Devereaux and Xiaofeng Qian and Xiang Zhang and Aaron M. Lindenberg},
-	title = {Berry curvature memory through electrically driven stacking transitions},
-	journal = {Nature Physics}
-}
 
-@article{Quashie2020,
-    title = {Effect of chemical disorder on the electronic stopping of solid solution alloys},
-    journal = {Acta Materialia},
-    volume = {196},
-    pages = {576-583},
-    year = {2020},
-    issn = {1359-6454},
-    doi = {https://doi.org/10.1016/j.actamat.2020.06.061},
-    url = {https://www.sciencedirect.com/science/article/pii/S1359645420304961},
-author = {Edwin E. Quashie and Rafi Ullah and Xavier Andrade and Alfredo A. Correa},
-}
 
-@article{Smart2021,
-    title = {Enhancing Defect Tolerance with Ligands at the Surface of Lead Halide Perovskites},
-    journal = {J. Phys. Chem. Lett.},
-    year = {submitted},
-    author = {Tyler J. Smart and Hiroyuki Takenaka and Tuan Anh Pham and Liang Z. Tan and Jin Z. Zhang and Tadashi Ogitsu and Yuan Ping}
-}
 
-@article{Caro2015,
-  title = {Adequacy of damped dynamics to represent the electron-phonon interaction in solids},
-  author = {Caro, A. and Correa, A. A. and Tamm, A. and Samolyuk, G. D. and Stocks, G. M.},
-  journal = {Phys. Rev. B},
-  volume = {92},
-  issue = {14},
-  pages = {144309},
-  numpages = {7},
-  year = {2015},
-  month = {Oct},
-  publisher = {American Physical Society},
-  doi = {10.1103/PhysRevB.92.144309},
-  url = {https://link.aps.org/doi/10.1103/PhysRevB.92.144309}
-}
 
-@article{Yost2019,
-  title={First-Principles Modeling of Electronic Stopping in Complex Matter under Ion Irradiation},
-  author={Yost, Dillon C and Yao, Yi and Kanai, Yosuke},
-  journal={The journal of physical chemistry letters},
-  volume={11},
-  number={1},
-  pages={229--237},
-  year={2019},
-  publisher={ACS Publications}
-}
 
-@article{Qiao2020,
-  title={Extending carrier lifetimes in lead halide perovskites with alkali metals by passivating and eliminating halide interstitial defects},
-  author={Qiao, Lu and Fang, Wei-Hai and Long, Run and Prezhdo, Oleg V},
-  journal={Angewandte Chemie International Edition},
-  volume={59},
-  number={12},
-  pages={4684--4690},
-  year={2020},
-  publisher={Wiley Online Library}
-}
+
