Push after edits by LLNL editors

--- a/COI.tex
+++ b/COI.tex
@@ -1,11 +1,21 @@
 \section{Others -- Collaborators and COIs}
 \label{sec:coi}
-\subsection{Tadashi Ogitsu}
-\subsection{Alfredo Correa}
-\subsection{Xavier Andrade}
-\subsection{Liang Tan}
-\subsection{David Prendergast}
-\subsection{Das Pemmeraju}
-\subsection{Aaron Lindenberg}
-
+{\centering
+\csvautotabular{COIs/coi_0.csv}
 \clearpage
+\csvautotabular{COIs/coi_1.csv}
+\clearpage
+\csvautotabular{COIs/coi_2.csv}
+\clearpage
+\csvautotabular{COIs/coi_3.csv}
+\clearpage
+\csvautotabular{COIs/coi_4.csv}
+\clearpage
+\csvautotabular{COIs/coi_5.csv}
+\clearpage
+\csvautotabular{COIs/coi_6.csv}
+\clearpage
+\csvautotabular{COIs/coi_7.csv}
+}
+\clearpage
+
