--- a/appendixb_staffing.tex
+++ b/appendixb_staffing.tex
@@ -3,18 +3,18 @@
 \begin{itemize}
     \item[]{\bf Director. Dr. Tadashi Ogitsu} is responsible for implementing NPNEQ project goals, coordinating the team’s ongoing communication strategy, leading the project management team, and developing the overall project strategy in collaboration with other project managers and based on the annual project review. Dr. Ogitsu is dedicating 25\% of his time to directing the project. He has extensive experience executing scientific research on developing ab-initio MD code, and he provides ongoing service to the scientific community through HPC and high-profile scientific research using state-of-the-art HPC. 
     
-    \item[]{\bf Deputy Director and Scientific Research Manager Dr. Aaron Lindenberg} is a world-leading expert in the area of ultrafast science. He is managing the scientific research tasks for this project, and his responsibilities include implementing the research strategy, and communicating with the method-development manager for effective incorporation of the validation strategy to scientific activities. His effort will be assisted by theoreticians Drs. Pemmaraju, Tan, and Prendergast. 
+    \item[]{\bf Deputy Director and Scientific Research Manager. Dr. Aaron Lindenberg} is a world-leading expert in the area of ultrafast science. He is managing the scientific research tasks for this project, and his responsibilities include implementing the research strategy, and communicating with the method-development manager for effective incorporation of the validation strategy to scientific activities. His effort will be assisted by theoreticians Drs. Pemmaraju, Tan, and Prendergast. 
     
-    \item[]{\bf Assistant Director and Validation Manager. Dr. Sri Chaitanya Das Pemmaraju} has been working at the premium DOE research institutions such as LBNL and SLAC for 7 years and has extensive experience in providing interpretation for ultrafast pump and probe experiments. Leveraging his synergistic activities at SLAC, he will help interpret the experimental results produced at SLAC, and ensure that the NPNEQ’s software development priorities are well aligned to the goals of DOE Basic Energy Sciences Program, in particular, Materials Sciences and Engineering Division. His responsibilities include assisting the Director and the Deputy Director in selecting/prioritizing/coordinating all research subtasks, monitoring activities against goals, and reporting on progress.
+    \item[]{\bf Assistant Director and Validation Manager. Dr. Sri Chaitanya Das Pemmaraju} has been working at the premium DOE research institutions such as LBNL and SLAC for 7 years and has extensive experience in providing interpretation for ultrafast pump and probe experiments. Leveraging his synergistic activities at SLAC, he helps interpret the experimental results produced at SLAC, and ensures that the NPNEQ’s software development priorities are well aligned to the goals of DOE Basic Energy Sciences Program, in particular, the Materials Sciences and Engineering Division. His responsibilities include assisting the Director and the Deputy Director in selecting/prioritizing/coordinating all research subtasks, monitoring activities against goals, and reporting on progress.
     
     \item[]{\bf Thrust 1. Dr. Alfredo Correa (Lead Software Designer)} has extensive experience in implementing TDDFT algorithms in Qbox (and its derivative code, Qball) and in running these codes on the DOE Leadership HPC systems. He is managing the software development tasks for this project. His responsibilities include defining and implementing the software-development strategy, communicating with the science manager and the validation manager in order to define required specifications for software, selecting/prioritizing/coordinating all software development tasks, monitoring activities against goals, and reporting on progress. Correa is dedicating 50\% of his time to leading the software-development tasks.
     
-    \item[]{\bf Thrust 2. Das Pemmaraju (Lead)} has extensive experience in the field of theory of ultrafast science, in particular, TDDFT simulations, as well as in programming. He will be performing TDDFT simulations for the software validation in tight collaboration with Liang Tan and Aaron Lindenberg (Task 3). His validation activities will be used to provide feedback to Task 1, software development led by Correa. 
+    \item[]{\bf Thrust 2. Das Pemmaraju (Lead)} has extensive experience in the field of theory of ultrafast science, in particular, TDDFT simulations, as well as in programming. He is performing TDDFT simulations for the software validation in tight collaboration with Tan and Lindenberg (Task 3). His validation activities are used to provide feedback to Task 1, software development led by Correa. 
     
-    \item[]{\bf Thrust 3. Liang Tan (Lead)} has extensive experience in studying quantum functional materials and has a long standing theory-experiments collaboration with Lindenberg. Tan has worked on the phenomenology of perovskite and topological materials, and will provide guidance on the interpretation of experiments performed on these materials in this project. His responsibilities will include liaising between Theory/Coding Thrust leads and the experimental efforts to interpret experimental results and to suggest experimental measurables that are also calculable within the developing computational framework. Tan will advise the Executive Board on topical areas and materials systems where there is emerging overlap between ultrafast measurements and computational capabilities. As part of his role in validation, he will guide coarse-grained calculations that rely upon TDDFT parameterization to reach long space- and time-scales to make contact with experiments at those scales.
+    \item[]{\bf Thrust 3. Liang Tan (Lead)} has extensive experience in studying quantum functional materials and has a long standing theory-experiments collaboration with Lindenberg. Tan has worked on the phenomenology of perovskite and topological materials, and provides guidance on the interpretation of experiments performed on these materials in this project. His responsibilities include liaising between Theory/Coding Thrust leads and the experimental efforts to interpret experimental results and to suggest experimental measurables that are also calculable within the developing computational framework. Tan advises the Executive Board on topical areas and materials systems where there is emerging overlap between ultrafast measurements and computational capabilities. As part of his role in validation, he guides coarse-grained calculations that rely upon TDDFT parameterization to reach long space- and time-scales to make contact with experiments at those scales.
     
-    \item[]{\bf Thrust 1. Dr. Xavier Andrade (GPU Implementation specialist)} has extensive experience in TDDFT method and software development. He is a major software development contributor of OCTOPUS code, one of the most popularly used codes in the scientific community, he made significant contribution in optimizing OCTOPUS code for GPU+GPU HPC systems. He will focus on GPU optimization through development of a software library named INQ, which consists of a foundational library and the mini application (mini-APP). The mini-APP is a stripped version of Qbox/Qball and the INQ library will contain the functions that are used in the original Qbox/Qball where change of the interface will be kept minimum to maximize balance in portability, debuggability, and functional extendibility. Andrade is dedicating 50\% of his time to GPU optimized software implementation.
+    \item[]{\bf Thrust 1. Dr. Xavier Andrade (GPU Implementation Specialist)} has extensive experience in TDDFT method and software development. He is a major software development contributor of OCTOPUS code, one of the most popularly used codes in the scientific community, and he made a significant contribution in optimizing OCTOPUS code for GPU+GPU HPC systems. He is focusing on GPU optimization through development of a software library named INQ, which consists of a foundational library and the mini application (mini-APP). The mini-APP is a stripped version of Qbox/Qball and the INQ library contains the functions that are used in the original Qbox/Qball, where change of the interface is kept minimum to maximize balance in portability, debuggability, and functional extendability. Andrade is dedicating 50\% of his time to GPU optimized software implementation.
     
-    \item[]{\bf Strategy Advisor. Dr. David Prendergast} is Facility Director, Theory of Nanostructured Materials at The Molecular Foundry and is an expert on the interpretation of spectroscopic data. Based on his experience in managing a large research organization such as TMF, he will oversee the NPNEQ project and provide feedback to the Director and the Deputy Director. 
+    \item[]{\bf Strategy Advisor. Dr. David Prendergast} is Facility Director, Theory of Nanostructured Materials at The Molecular Foundry and is an expert on the interpretation of spectroscopic data. Based on his experience in managing a large research organization such as TMF, he oversees the NPNEQ project and provides feedback to the Director and the Deputy Director. 
 \end{itemize}
 \clearpage
