--- a/budget.tex
+++ b/budget.tex
@@ -1,4 +1,4 @@
-\section{Budget And Staffing Tables}
+\section{Budget and Staffing Tables}
 \label{sec:budget}
 
 
@@ -6,7 +6,7 @@
     \centering\small
     \begin{tabular}{|l|l|l|l|l|}
     \hline
-        Last Name & First Name & Effort level & Role & Institution \\
+        \bf Last Name & \bf First Name & \bf Effort Level & \bf Role & \bf Institution \\
         \hline
         Ogitsu & Tadashi & 0.25FTE & Director & LLNL \\
         Correa & Alfredo & 0.5FTE & Software Design Lead & LLNL \\
@@ -27,7 +27,7 @@
     \centering
     \begin{tabular}{|l|llll|l|}
     \hline
-    Institution Name     & Year 1 & Year 2 & Year 3 & Year 4 & Total \\
+    \bf Institution Name     & \bf Year 1 & \bf Year 2 & \bf Year 3 & \bf Year 4 & \bf Total \\
     \hline
     Lawrence Livermore National Laboratory & \$575k & \$575k & \$575k & \$575k & \$2,300k \\
     Lawrence Berkeley National Laboratory & \$150k & \$150k & \$150k & \$150k & \$600k \\
@@ -44,7 +44,7 @@
     \centering
     \begin{tabular}{|l|llll|l|}
     \hline
-        Tasks/Thrusts & Year 1 & Year 2 & Year 3 & Year 4 & Total Budget \\
+        \bf Tasks/Thrusts & \bf Year 1 & \bf Year 2 & \bf Year 3 & \bf Year 4 & \bf Total Budget \\
         \hline
         Software development & \$575k & \$575k & \$575k & \$575k & \$2,300k \\
         Interpretation & \$150k & \$150k & \$150k & \$150k & \$600k \\
