--- a/development.tex
+++ b/development.tex
@@ -1,34 +1,34 @@
-\section{Development And Utilization Of Unique Facilities, Capabilities, Or Approaches}
+\section{Development and Utilization of Unique Facilities, Capabilities, Or Approaches}
 \label{sec:development}
 
 
-As requested by the program, one of the central objectives of the first half of the NPNEQ center was the delivery of a performant GPU DFT code to tackle non-perturbative and non-equilibrium phenomena studied by the center.
-This effort performed during the first half of the project culminated in the initial release of the \textsc{inq} code (tagged as \texttt{v0.5} available in \url{https://gitlab.com/npneq/inq/-/releases}).
+Per the program's request, one of the central objectives for work during the first half of the NPNEQ center was the delivery of a performant GPU DFT code to tackle non-perturbative and non-equilibrium phenomena studied by the center.
+This effort culminated in the initial release of the \textsc{inq} code (tagged as \texttt{v0.5} available in \url{https://gitlab.com/npneq/inq/-/releases}).
 
-However we must note that the development cycle of \textsc{inq} is not based on release versions; instead with believe in modern continuous integration which means that the code is ready for deployment \emph{at all times} with an incremental number of features.
-(Although git secondary branches still might be work-in-progress).
-Features are added continuously and not tied to a specific label.
+However, we note that the development cycle of \textsc{inq} is not based on release versions but instead on belief in modern continuous integration, which means that the code is ready for deployment \emph{at all times} with an incremental number of features.
+(Although git secondary branches still might be a work-in-progress).
+Features are added continuously and are not tied to a specific label.
 
 The project has a natural place for the insipient developers community, namely the \url{https://gitlab.com/NPNEQ} hub, the wiki \url{https://gitlab.com/npneq/inq/-/wikis/home} and the \emph{issues} tracker \url{https://gitlab.com/npneq/inq/-/issues}.
-There is a count of more than 94 issues open so far, including comments, bug reports, and feature requests.
-The wiki includes about 20 documents, including a initial version of the developers guide, and notes about HPC systems.
+There is a count of more than 94 open issues so far, including comments, bug reports, and feature requests.
+The wiki comprises about 20 documents, including an initial version of the developers guide, and notes about HPC systems.
 
 The gitlab NPNEQ hub contains component libraries, such as \textsc{Multi}, \textsc{B.MPI3}.
 These two libraries in particular are used by the QMCPACK codebase (DOE's sponsored Quantum Montecarlo code), showing how synergistic the modern development spearheaded by NPNEQ can benefit other projects.
 
 NPNEQ was awarded with special computer allocation during the competitive 15th
 Institutional Unclassified Computing Grand Challenge (GC) Program.
-LLNL's GC competition is similar to DOE's INCITE program, except that it awards time for Livermore Computer Facility (Lassen in this case).
+LLNL's GC competition is similar to DOE's INCITE program, except that it awards time in the Livermore Computer Facility (on Lassen in this case).
 
 Outreach activities include the organization of a symposium at the 2021 Molecular Foundry Annual User meeting (August 19-20, 2021). 
 The symposium, entitled ``Non-Equilibrium and Non-Perturbative Experimental and Theoretical Methods for Dynamical Science'', aims to survey recent progress in manipulation, measurement, and simulation of non-equilibrium dynamics.
 Alongside the symposium organization, the \textsc{inq} team will also be presenting a tutorial-style introduction to the code during the Molecular Foundry User Meeting, as a way to introduce the code to the electronic structure community.
 
-Finally, we are taking advantage of the LLNL's sponsored Computational Chemistry \& Materials Science Summer Institute 2021 (CCMS).
-CCMS is an intership program attracting about a dozen top students in the area of material.
-This year one of our members {\bf Correa} is director of this program.
-Invited lecturers include Hardy Gross, one of the pionners of TDDFT.
-Two graduate students (Yifan Yao, Univ. of Illinois Urbana and Rijul Chauhan from Texas A\&M) were accepted to perform \textsc{inq}'s related wotk.
+Finally, we are taking advantage of LLNL's sponsored Computational Chemistry \& Materials Science Summer Institute 2021 (CCMS).
+CCMS is an intership program attracting about a dozen top students in the area of materials science.
+This year, one of our members {\bf Correa} is director of this program.
+Invited lecturers include Hardy Gross, one of the pioneers of TDDFT.
+Two graduate students (Yifan Yao, Univ. of Illinois Urbana and Rijul Chauhan from Texas A\&M) were accepted to perform \textsc{inq}'s related work.
 
 \clearpage
 
