--- a/main.tex
+++ b/main.tex
@@ -33,6 +33,9 @@
 \addbibresource{npneq-master.bib} %Import the bibliography file
 \DeclareUnicodeCharacter{0301}{\'{e}}
 
+\usepackage{csvsimple}
+
+
 
 
 %----------------------------------------------------------------------------------------
@@ -55,7 +58,8 @@
  {\bf Partner Institutions:} Lawrence Berkeley National Laboratory & SLAC National Accelerator Laboratory}
 
 \maketitle % Inserts the title, author and date
-
+\vspace{4.5in}
+{\noindent\small Part of the work was performed under the auspices of the US Department of Energy by Lawrence Livermore National Laboratory under contract no. DE-AC52-07NA27344.}
 \clearpage
 %----------------------------------------------------------------------------------------
 %	Table of Content
@@ -81,6 +85,7 @@
 \input{appendixb_staffing}
 \input{appendixc_bestpub}
 \input{COI}
+\input{FFTPerfOnSummit}
 
 
 
