--- a/publications.tex
+++ b/publications.tex
@@ -2,7 +2,7 @@
 \label{sec:publications}
 
 \subsection{A-type}
-Publications that were \underline{solely supported by this project} and \underline{those in collaboration with others that} \underline{are based on work which was intellectually driven by this project}.
+Publications that were solely supported by this project and those in collaboration with others that are based on work which was intellectually driven by this project.
 \begin{enumerate}
     \item \textcolor{blue}{Xavier Andrade}, \textcolor{blue}{Chaitanya Das Pemmaraju}, {\bf Alexy Kartsev}, \textcolor{blue}{Liang Z. Tan}, {\bf Sangeeta Rajpurohit}, {\bf Jun Xiao},  \textcolor{blue}{Aaron Lindenberg}, \textcolor{blue}{Tadashi Ogitsu}, and \textcolor{blue}{Alfredo Correa}, "INQ, a modern GPU-accelerated computational framework for (time-dependent) density functional theory", submitted on June 7, \url{https://arxiv.org/abs/2106.03872}.
     \item {\bf Sangeeta Rajpurohit}, \textcolor{blue}{C. Das Pemmeraju}, \textcolor{blue}{Tadashi Ogitsu}, and \textcolor{blue}{Liang Z. Tan}, "A non-perturbative study of bulk photovoltaic effect enhanced by an optically induced phase transition", submitted on May 24, 2021, \url{https://arxiv.org/abs/2105.11310}.
@@ -20,7 +20,7 @@ Collaborative publications jointly supported by this project and other programs 
 
     \item Khalid M. Siddiqui1, Daniel B. Durham, Frederick Cropp, Colin Ophus, {\bf Sangeeta Rajpurohit}, Yanglin Zhu, Johan D. Carlstr\"{o}m, Camille Stavrakas, Zhiqiang Mao, Archana Raja, Pietro Musumeci, \textcolor{blue}{Liang Z. Tan}, Andrew M. Minor, Daniele Filippetto, and Robert A. Kaindl, "Ultrafast optical melting of trimer superstructure in layered 1T’-TaTe2" submitted.  arXiv:2009.02891
 
-    \item Edbert J. Sie, Clara M. Nyby, \textcolor{blue}{C. D. Pemmaraju}, Christina A. C. Garcia11, Yaxian Wang11, Burak Guzelturk6, Chenyi Xia, {\bf Jun Xiao}, Andrey Poletayev, B. K. Ofori-Okai, Matthias C. Hoffmann, Su Ji Park, Xiaozhe Shen, Jie Yang, Renkai Li, Alexander H. Reid, Stephen Weathersby, Philipp Muscher, Nathan Finney, Daniel Rhodes, Luis Balicas, James Hone, William Chueh, Thomas P. Devereaux, Prineha Narang,Tony F. Heinz, Xijie Wang, \textcolor{blue}{Aaron M. Lindenberg}, "Ultrathin Terahertz Waveplate using an Anisotropic Semimetal" under review.
+    \item Edbert J. Sie, Clara M. Nyby, \textcolor{blue}{C. D. Pemmaraju}, Christina A. C. Garcia11, Yaxian Wang, Burak Guzelturk, Chenyi Xia, {\bf Jun Xiao}, Andrey Poletayev, B. K. Ofori-Okai, Matthias C. Hoffmann, Su Ji Park, Xiaozhe Shen, Jie Yang, Renkai Li, Alexander H. Reid, Stephen Weathersby, Philipp Muscher, Nathan Finney, Daniel Rhodes, Luis Balicas, James Hone, William Chueh, Thomas P. Devereaux, Prineha Narang,Tony F. Heinz, Xijie Wang, \textcolor{blue}{Aaron M. Lindenberg}, "Ultrathin Terahertz Waveplate Using an Anisotropic Semimetal" under review.
     
     \item Ming-Fu Lin, Narendra Singh, Shujia Liang, Mianzhen Mo, Pedro Nunes, Kathryn Ledbetter, Jie Yang, Michael Kozina, Stephen Weathersby, Xiaozhe Shen, Amy Cordones-Hahn, Thomas Wolf, Kelly Gaffney, \textcolor{blue}{C. D. Pemmaraju}, Matthias Ihme, Xijie Wang, "Imaging the solvated hydronium cation and hydroxyl radical in the ionized liquid water", under review.
 
